Form block tablet and Desktop (Branch 11.5) - missing fields fix (#49)
* excluded synchronising css folder

* excluded synchronising css folder

* excluded synchronising css folder

* replaced some pictures with the new graphic

* swapping images

* finished swapping the pictures on all pages

* removed redundant variables

* correcting images in _intro

* while swapping imgs forgot to add one class modifier in phtos and form file - now it's fixed

* corrcted minor issues with pictures separators and fixed overflowing of the video container

* fixed missing separator between gallery and video

* created mixin for inner padding LR and mixin for the big buttons

* work in progres

* Style lint fixes

* creating mixins work in progress, added ruls to the stylelint file

* Update stylint and fix some complaints

* updating header mixin

*  header and paragraph mixins used in the files

* repeated previous commit after the pull from the master

* making menu bar for the tabet and desktop - WIP

* nav menu work in progress

* styled intro for the tablet

* work in progress

* changed margin in the elements

* made the website maximum 1200px width

* used flexbox to position position content in the middle of the window

* styled page wrapper for the desktop page

* corrected specaing in the nav menu

* corrected space indentation for the stylelint

* styled intro for Tablet and Desktop

* added background images for the different screen sizes

* styled preamble for tablet and desktop

* styling sightseeing block - work in progress

* work in progress

* work in progress

* styled sightseeing blocks, picture instead being added by picture tag were add asa a background-images

* styled the icons

* styled recommendation block for tablet and desktop

* styled whole block

* styled find-hotel block

* styled page footer for tablet and Desktop, removed redundant code in the social block

* styled

--- a/sass/blocks/form/_form.scss
+++ b/sass/blocks/form/_form.scss
@@ -469,7 +469,7 @@
     line-height: 0;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 40px;
+    margin-bottom: 4rem;
   }
 
   &__preview-photo {
@@ -782,8 +782,7 @@
     &__grid-item {
       flex-basis: 22%;
       margin-right: 6%;
-      margin-bottom: 10vw;
-      margin-bottom: 65px;
+      margin-bottom: 6.5rem;
     }
 
     &__submit {
@@ -919,7 +918,7 @@
     }
 
     &__error {
-      top: -20px;
+      top: -2rem;
       left: 10.7rem;
       text-align: left;
     }
@@ -962,6 +961,19 @@
 
     &__number-holder {
       margin-left: 0.8rem;
+      padding-right: 6.5rem;
+
+      &--day {
+        &::after {
+          content: "day";
+        }
+      }
+
+      &--person {
+        &::after {
+          content: "person";
+        }
+      }
     }
 
     &__btn {
